--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = climan
 version = attr: climan.__version__
 url = https://github.com/smartlegionlab/climan/
-author = A.A Suvorov
+author = A.A. Suvorov
 author_email = smartlegiondev@gmail.com
 description = Cross-platform config and manager for click console utilities.
 long_description = file: README.md
